# sqlite-server

./: CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  go.mod  go.sum  myapp.db-shm  myapp.db-wal
cmd/sqlite-server/: main.go
compat/postgres/: functions.go  operators.go  types.go
configs/: dev.yaml  docker-compose.yml  production.yaml
docs/: 01-overview.md  02-installation-and-build.md  03-running-and-cli.md  04-architecture-deep-dive.md  05-testing-guide.md  06-sql-compatibility.md  07-troubleshooting.md  08-wire-protocol-reference.md  09-developer-guide.md  10-performance-and-production.md  README.md
examples/: README.md
examples/01-go-basic/: go.mod  main.go
examples/02-python-psycopg2/: app.py
examples/03-nodejs-pg/: app.js
examples/04-typescript-pg/: README.md  app.ts  package.json  tsconfig.json
examples/05-java-jdbc/: README.md  pom.xml
examples/06-csharp-npgsql/: HrApp.csproj  Program.cs  README.md
examples/07-rust-tokio-postgres/: Cargo.toml  README.md
examples/07-rust-tokio-postgres/src/: main.rs
examples/08-php-pdo/: README.md  app.php  composer.json
examples/09-ruby-pg/: Gemfile  README.md  app.rb
examples/10-python-sqlalchemy/: README.md  app.py  requirements.txt
internal/catalog/: catalog.go
internal/engine/: executor.go  optimizer.go  translator.go
internal/errors/: pgerrors.go  sqlstate.go
internal/pgproto/: types.go
internal/pool/: connpool.go
internal/wire/: auth.go  error.go  extended_query.go  messages.go  ready.go  server.go  session.go  simple_query.go  startup.go  types.go
sql/ast/: ast.go
(+10 files in other folders)
