[package]
name    = "analytics-dashboard"
version = "0.1.0"
edition = "2021"
description = "Analytics Dashboard — sqlite-server + tokio-postgres example"

[[bin]]
name = "analytics-dashboard"
path = "src/main.rs"

[dependencies]
# PostgreSQL async driver — works with sqlite-server's wire protocol
tokio-postgres = { version = "0.7", features = [] }

# Async runtime
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level   = 3
lto         = true
codegen-units = 1
strip       = true
